# droidcam

linux/: CMakeLists.txt
linux/src/: common.h  connection.c  connection.cpp  connection.h  context.h  decoder.c  decoder.cpp  decoder.h  droidcam-cli.c  droidcam-cli.cpp  droidcam.c  droidcam.cpp  droidcam.h  droidcamBase.cpp  droidcamBase.h  ipcam.c  ipcam.cpp  ipcam.h  jpegpp.cpp  jpegpp.h  util.c  util.cpp  util.h
linux/v4l2loopback/: .gitignore  v4l2loopback-dc.c
